ddp-workspace/projects/ddp-esc/src/styles.scss
/* ... */
.ddp-picklist-option-list-item {
    height: auto !important;
    margin-bottom: 10px;
}

.ddp-picklist-group-title {
    font-size: 1.25rem;
    font-weight: 500;
}

.example-radio-group {
    display: flex;
    flex-direction: row;
}

.ddp-login-button {
    @extend .mat-button;
}

.subhead:after {
    content: "";
    display: table;
    clear: both;
}

/**
    Define the prompt to be displayed after a required question
*/
.ddp-required-question-prompt:after {
    content: ' *';
}

@media only screen and (max-width: 1100px) {
    .ddp-picklist-group-container {
        grid-template-columns: repeat(2, 50%) !important;
    }
}

@media only screen and (max-width: 600px) {
    .ddp-picklist-group-container {
        grid-template-columns: repeat(1, 100%) !important;
    }
}

.mat-snack-bar-container {
    box-shadow: 0 2px 2px rgba(0, 0, 0, .24), 0 0 2px rgba(0, 0, 0, .12);
    margin: 4px;
    background-color: mat-color($app-theme, 100);
    padding: 0 !important;
}

.mat-checkbox-label {
    color: mat-color($app-theme, 1700);
    font-weight: 300;
}

.mat-select-placeholder {
    color: mat-color($app-theme, 1700);
}

.mat-radio-label {
    font-weight: 300;
}

.mat-checkbox-layout {
    align-items: normal !important;
}

.mat-input-flex {
    font-weight: 300;
}

.mat-dialog-container {
    background-color: mat-color($app-theme, 1300);
}

.mat-form-field-invalid .mat-form-field-label {
    color: mat-color($app-theme, 1200);
}

.mat-error {
    color: mat-color($app-theme, 1200);
}

.mat-form-field-invalid .mat-form-field-ripple {
    background-color: mat-color($app-theme, 1200);
}

.mat-form-field-label-wrapper {
    font-weight: 300;
    font-size: 1rem;
}

.mat-input-placeholder {
    font-weight: 300;
    font-size: 1rem;
}

.mat-error {
    font-weight: 300;
    font-size: 0.75rem;
}

.mat-checkbox-frame {
    border-color: mat-color($app-theme, 900);
}

.mat-radio-outer-circle {
    border-color: mat-color($app-theme, 900);
}

.mat-list-item-content {
    padding: 0 4px 0 0 !important;
}

.mat-checkbox-layout .mat-checkbox-label {
    font-size: 1rem;
}

.mat-radio-label-content {
    font-size: 1rem;
}

.mat-form-field-infix {
    font-size: 1rem;
}

.mat-list .mat-list-item .mat-list-item-content {
    display: block !important;
}

.mat-input-element {
    height: 2.0rem !important;
    font-size: 1rem;
}

input.mat-input-element {
    height: 1.2rem !important;
    font-size: 1rem;
}

.mat-form-field .mat-form-field-subscript-wrapper {
    overflow: visible !important;
}

.mat-input-element {
    line-height: 1.1rem;
    font-size: 1rem;
}

.mat-radio-outer-circle,
.mat-radio-inner-circle {
    height: 16px !important;
    width: 16px !important;
}

.mat-radio-container {
    margin-top: 3px !important;
    height: 16px !important;
    width: 16px !important;
}

.mat-radio-checked .mat-radio-inner-circle {
    transform: scale(.8) !important;
}

.mat-menu-item {
    padding: 0 !important;
}

@media only screen and (min-width: 768px) {

    .mat-row:first-child,
    .mat-header-row:first-child {
        flex: 0 0 40% !important;
    }

    .mat-row:last-child,
    .mat-header-row:last-child {
        flex: 0 0 15% !important;
    }
}

.mat-checkbox-inner-container:hover .mat-checkbox-persistent-ripple {
    opacity: 0 !important;
}

.mat-checkbox-inner-container {
    width: 20px !important;
    height: 20px !important;
}

.mat-input-element {
    font-weight: 100 !important;
}

.mat-select {
    font-weight: 100 !important;
}

.ddp-helper {
    font-size: 0.8rem !important;
    color: mat-color($app-theme, 800) !important;
}

.ddp-counter-color {
    color: mat-color($app-theme, 2200) !important;
}

.ddp-answer-container {
    display: flex;
    flex-direction: row;
}

.mat-option-text {
    line-height: 16px !important;
    white-space: normal !important;
}

@media only screen and (max-width: 480px) {
    .mat-option-text {
        font-size: 14px !important;
    }

    .mat-form-field-placeholder {
        font-size: 12px !important;
        white-space: normal !important;
    }

    .composite-answer-OTHER_CANCERS_LIST {
        .ddp-answer-container {
            flex-direction: column !important;
        }

        .ddp-composite-text {
            margin-right: 0;
        }

        .mat-form-field {
            width: 100%;
        }
    }

    .date-answer-DIAGNOSIS_DATE {
        .ddp-answer-container {
            flex-direction: column !important;
        }

        select:last-child {
            margin-top: 10px;
        }
    }
}

.mat-drawer-content {
    overflow: hidden !important;
}

